theme light problem solved

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="add_your_garment">Add your Garment</string>
+    <string name="upload_your_image_here">Upload your image here</string>
 </resources>
