setting up splash screen (design + code)

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="add_your_garment">Add your Garment</string>
     <string name="upload_your_image_here">Upload your image here</string>
+    <string name="category"><b>Category : </b></string>
 </resources>
