add item screen done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="color"><b>Color :</b></string>
     <string name="add_this_garment">Add This Garment</string>
     <string name="color_of_your_item">color of your item</string>
+    <string name="today_i_want_my_outfit_to_be"><b>Today I want my outfit to be :</b></string>
 
 </resources>
