choose outfit screen

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -15,4 +15,5 @@
     <string name="add_this_garment">Add This Garment</string>
     <string name="color_of_your_item">color of your item</string>
     <string name="today_i_want_my_outfit_to_be"><b>Today I want my outfit to be :</b></string>
+    <string name="my_choices">My Choices</string>
 </resources>
