--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -28,4 +28,5 @@
     <string name="here_is_a_list_of_my_outfits">Here is a List of My outfits</string>
     <string name="modify">Modify</string>
     <string name="delete">Delete</string>
+    <string name="colors">Color</string>
 </resources>
