--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,8 @@
     <string name="modify">Modify</string>
     <string name="delete">Delete</string>
     <string name="colors">Color</string>
+    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
+    <string name="yess">Yes</string>
+    <string name="noo">No</string>
 
 </resources>
